modificando ruta de imagen

--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Coda+Caption:800&display=swap" rel="stylesheet">
     <title>cipher</title>
-    <link rel="stylesheet" href="hola.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header id="header">
       <p>POLICIA NACIONAL DEL PERU </p>
-      <img src="descarga.png" alt="logo1"/>
+      <img class="img" src="../imagenes/escudo.png" alt="logo1"/>
         <h1> BIENVENIDOS &nbsp; P &nbsp; N &nbsp; P</h1>
         <hr id="line">
         <main>
@@ -90,7 +90,7 @@
         </main>
         
     </header>
-    <script src="app.js"></script>
+    <script src="index.js"></script>
     <script src="cipher.js"></script>
 </body>
 </html>
