modificaciones en css, index.html, index.js y readme

--- a/src/index.html
+++ b/src/index.html
@@ -10,20 +10,21 @@
 </head>
 <body>
     <header id="header">
-      <p>POLICIA NACIONAL DEL PERU </p>
-      <img class="img" src="../imagenes/escudo.png" alt="logo1"/>
-        <h1> BIENVENIDOS &nbsp; P &nbsp; N &nbsp; P</h1>
+      <h1>POLICIA NACIONAL DEL PERU </h1>
+        <img class="img" src="../img/logo.png" alt="logo1"/>
+      
+        <h2> BIENVENIDOS &nbsp; P &nbsp; N &nbsp; P</h2>
         <hr id="line">
         <main>
           <div id="login">
             <form action="usuario" id="hola">
                <!-- primera pagina -->
                 <div class= "text" id="pag1">
-                  <h1> formulario</h1>
-                  <label type="email"><b>Email</b></label>
-                  <input type="texto" placeholder="INGRESE CORREO" name="email" required><br> <br>
-                  <label type="password"><b>passsword</b></label>
-                  <input type="password"placeholder="INGRESE PASSWOORD" name="psw" required><br><br>
+                  <h1> INGRESAR</h1>
+                  <label type="email"><b>EMAIL</b></label>
+                  <input type="texto" placeholder="&#x1F510;INGRESE CORREO"  name="email" required><br> <br>
+                  <label type="password"><b>PASSWOORD</b></label>
+                  <input type="password"placeholder="&#x1F510;INGRESE PASS" name="psw" required><br><br>
 
                   <input type="button" value="INICIA SESION" id="iniciar">
                 </div>
@@ -59,8 +60,8 @@
                    <!-- boton encriptar -->
                   <input type="button" value="CODIFIQUE SU MENSAJE" id="offse1" class="texto-white" >
                   <div id="msjeEncr" class="msj-aprob"></div>
-                  <p id="msjeEncriptado"></p>
-                  <a href="mailto:cuenta@deemail.com"> enviar email </a>
+                  <p id="msjeEncriptado"></p> <br>
+                  <a href="mailto:cuenta@deemail.com"> ENVIAR POR EMAIL </a>
                   <!-- <button id="btnEncriptar" class="botonCodificar"> codifique su mensaje</button> -->
               </div>
               <button onclick="location.reload();"class="btninicio">IR A INICIO</button>
